Fixed overflow of search box in mobile.

--- a/frontend/src/app/modules/mips/components/search-mobile/search-mobile.component.scss
+++ b/frontend/src/app/modules/mips/components/search-mobile/search-mobile.component.scss
@@ -276,6 +276,7 @@ img {
     background-color: #fff;
     white-space: nowrap;
     width: 100%;
+    overflow-x:hidden;
   }
 }
 
